--- a/project3/Bproject3.ipynb
+++ b/project3/Bproject3.ipynb
@@ -4328,7 +4328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4337,6 +4337,10 @@
     "\n",
     "# 混合行列を作成するためのモジュールをインポート\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "# F1\n",
+    "from sklearn.metrics import f1_score\n",
+    "# recall\n",
+    "from sklearn.metrics import recall_score\n",
     "\n",
     "# ROCを作成する\n",
     "from sklearn.metrics import roc_curve\n",
@@ -4393,7 +4397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -4430,6 +4434,8 @@
        "      <th>検証(FP 0-&gt;1)%</th>\n",
        "      <th>検証(FN 1-&gt;0)%</th>\n",
        "      <th>検証(TP 1-&gt;1)%</th>\n",
+       "      <th>RECALL</th>\n",
+       "      <th>F1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4439,17 +4445,17 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [訓練精度%, 検証精度%, AUC(訓練), AUC(検証), AUC rate, 訓練(TN 0->0)%, 訓練(FP 0->1)%, 訓練(FN 1->0)%, 訓練(TP 1->1)%, 検証(TN 0->0)%, 検証(FP 0->1)%, 検証(FN 1->0)%, 検証(TP 1->1)%]\n",
+       "Columns: [訓練精度%, 検証精度%, AUC(訓練), AUC(検証), AUC rate, 訓練(TN 0->0)%, 訓練(FP 0->1)%, 訓練(FN 1->0)%, 訓練(TP 1->1)%, 検証(TN 0->0)%, 検証(FP 0->1)%, 検証(FN 1->0)%, 検証(TP 1->1)%, RECALL, F1]\n",
        "Index: []"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = pd.DataFrame(columns=[\"訓練精度%\", \"検証精度%\", \"AUC(訓練)\", \"AUC(検証)\", \"AUC rate\", \"訓練(TN 0->0)%\", \"訓練(FP 0->1)%\", \"訓練(FN 1->0)%\", \"訓練(TP 1->1)%\", \"検証(TN 0->0)%\", \"検証(FP 0->1)%\", \"検証(FN 1->0)%\", \"検証(TP 1->1)%\" ])\n",
+    "result = pd.DataFrame(columns=[\"訓練精度%\", \"検証精度%\", \"AUC(訓練)\", \"AUC(検証)\", \"AUC rate\", \"訓練(TN 0->0)%\", \"訓練(FP 0->1)%\", \"訓練(FN 1->0)%\", \"訓練(TP 1->1)%\", \"検証(TN 0->0)%\", \"検証(FP 0->1)%\", \"検証(FN 1->0)%\", \"検証(TP 1->1)%\", \"RECALL\", \"F1\" ])\n",
     "\n",
     "# idx = result[\"タイトル\"].values.tolist().index(\"a\")\n",
     "# result.drop(index=idx, inplace=True)\n",
@@ -4458,7 +4464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4489,6 +4495,14 @@
     "    appendlst[1] = accuracy_score(y_test, clf.predict(X_test))*100\n",
     "    appendlst[9:11] = (conf_mtrx_df.loc['target(0)', :]*100/sum(conf_mtrx_df.loc['target(0)', :])).tolist()\n",
     "    appendlst[11:13] = (conf_mtrx_df.loc['target(1)', :]*100/sum(conf_mtrx_df.loc['target(1)', :])).tolist()\n",
+    "    \n",
+    "    recall = recall_score(y_test, clf.predict(X_test))\n",
+    "    f1 = f1_score(y_test, clf.predict(X_test))\n",
+    "    \n",
+    "    print(\"RECALL : \", recall)\n",
+    "    print(\"F1値 : \", f1)\n",
+    "    \n",
+    "    appendlst[13:15] = [recall, f1]\n",
     "    \n",
     "    print(\"\\n ==== ROC \")\n",
     "    # 訓練用データ\n",
@@ -4524,6 +4538,7 @@
     "    appendlst[2:5] = [auc_value_train, auc_value_test, (auc_value_train/auc_value_test)]\n",
     "    \n",
     "    \n",
+    "    \n",
     "    result.loc[title] = appendlst"
    ]
   },
@@ -4542,7 +4557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4552,7 +4567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -4675,6 +4690,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.8452380952380952\n",
+      "F1値 :  0.8352941176470589\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9191899772501523\n",
@@ -4707,7 +4724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -4840,6 +4857,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.8571428571428571\n",
+      "F1値 :  0.8372093023255814\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9414857406185524\n",
@@ -4897,7 +4916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4910,7 +4929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -5033,6 +5052,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.9285714285714286\n",
+      "F1値 :  0.8764044943820225\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.96801403441315\n",
@@ -5065,7 +5086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -5198,6 +5219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.9523809523809523\n",
+      "F1値 :  0.898876404494382\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9578293063541439\n",
@@ -5232,7 +5255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5241,7 +5264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -5279,7 +5302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5289,7 +5312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -5412,6 +5435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.7976190476190477\n",
+      "F1値 :  0.7790697674418605\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9371895927456824\n",
@@ -5444,7 +5469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -5577,6 +5602,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.8690476190476191\n",
+      "F1値 :  0.8021978021978022\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9494349661189136\n",
@@ -5622,7 +5649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5633,7 +5660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -5756,6 +5783,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.9523809523809523\n",
+      "F1値 :  0.888888888888889\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9567192156108815\n",
@@ -5787,7 +5816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -5920,6 +5949,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  1.0\n",
+      "F1値 :  0.9081081081081082\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9564206491343828\n",
@@ -5953,7 +5984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5962,7 +5993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -5998,7 +6029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6009,7 +6040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -6132,6 +6163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.9642857142857143\n",
+      "F1値 :  0.8804347826086957\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.992141689897145\n",
@@ -6163,7 +6196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -6296,6 +6329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RECALL :  0.9642857142857143\n",
+      "F1値 :  0.8901098901098902\n",
       "\n",
       " ==== ROC \n",
       "AUC(train): 0.9964076622574125\n",
@@ -6336,7 +6371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -6373,6 +6408,8 @@
        "      <th>検証(FP 0-&gt;1)%</th>\n",
        "      <th>検証(FN 1-&gt;0)%</th>\n",
        "      <th>検証(TP 1-&gt;1)%</th>\n",
+       "      <th>RECALL</th>\n",
+       "      <th>F1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -6391,6 +6428,8 @@
        "      <td>14.074074</td>\n",
        "      <td>3.571429</td>\n",
        "      <td>96.428571</td>\n",
+       "      <td>0.964286</td>\n",
+       "      <td>0.880435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LGBM_SMOTE</th>\n",
@@ -6407,6 +6446,8 @@
        "      <td>12.592593</td>\n",
        "      <td>3.571429</td>\n",
        "      <td>96.428571</td>\n",
+       "      <td>0.964286</td>\n",
+       "      <td>0.890110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Logistic</th>\n",
@@ -6423,6 +6464,8 @@
        "      <td>11.111111</td>\n",
        "      <td>15.476190</td>\n",
        "      <td>84.523810</td>\n",
+       "      <td>0.845238</td>\n",
+       "      <td>0.835294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Logistic_SMOTE</th>\n",
@@ -6439,6 +6482,8 @@
        "      <td>11.851852</td>\n",
        "      <td>14.285714</td>\n",
        "      <td>85.714286</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.837209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForest</th>\n",
@@ -6455,6 +6500,8 @@
        "      <td>11.851852</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>95.238095</td>\n",
+       "      <td>0.952381</td>\n",
+       "      <td>0.888889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForest_SMOTE</th>\n",
@@ -6471,6 +6518,8 @@
        "      <td>12.592593</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.908108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVM</th>\n",
@@ -6487,6 +6536,8 @@
        "      <td>15.555556</td>\n",
        "      <td>20.238095</td>\n",
        "      <td>79.761905</td>\n",
+       "      <td>0.797619</td>\n",
+       "      <td>0.779070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVM_SMOTE</th>\n",
@@ -6503,6 +6554,8 @@
        "      <td>18.518519</td>\n",
        "      <td>13.095238</td>\n",
        "      <td>86.904762</td>\n",
+       "      <td>0.869048</td>\n",
+       "      <td>0.802198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tree</th>\n",
@@ -6519,6 +6572,8 @@
        "      <td>11.851852</td>\n",
        "      <td>7.142857</td>\n",
        "      <td>92.857143</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.876404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tree_SMOTE</th>\n",
@@ -6535,6 +6590,8 @@
        "      <td>10.370370</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>95.238095</td>\n",
+       "      <td>0.952381</td>\n",
+       "      <td>0.898876</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6565,20 +6622,32 @@
        "Tree                   90.614887      9.385113      0.000000    100.000000   \n",
        "Tree_SMOTE             90.614887      9.385113      0.647249     99.352751   \n",
        "\n",
-       "                    検証(TN 0->0)%  検証(FP 0->1)%  検証(FN 1->0)%  検証(TP 1->1)%  \n",
-       "LGBM                   85.925926     14.074074      3.571429     96.428571  \n",
-       "LGBM_SMOTE             87.407407     12.592593      3.571429     96.428571  \n",
-       "Logistic               88.888889     11.111111     15.476190     84.523810  \n",
-       "Logistic_SMOTE         88.148148     11.851852     14.285714     85.714286  \n",
-       "RandomForest           88.148148     11.851852      4.761905     95.238095  \n",
-       "RandomForest_SMOTE     87.407407     12.592593      0.000000    100.000000  \n",
-       "SVM                    84.444444     15.555556     20.238095     79.761905  \n",
-       "SVM_SMOTE              81.481481     18.518519     13.095238     86.904762  \n",
-       "Tree                   88.148148     11.851852      7.142857     92.857143  \n",
-       "Tree_SMOTE             89.629630     10.370370      4.761905     95.238095  "
+       "                    検証(TN 0->0)%  検証(FP 0->1)%  検証(FN 1->0)%  検証(TP 1->1)%  \\\n",
+       "LGBM                   85.925926     14.074074      3.571429     96.428571   \n",
+       "LGBM_SMOTE             87.407407     12.592593      3.571429     96.428571   \n",
+       "Logistic               88.888889     11.111111     15.476190     84.523810   \n",
+       "Logistic_SMOTE         88.148148     11.851852     14.285714     85.714286   \n",
+       "RandomForest           88.148148     11.851852      4.761905     95.238095   \n",
+       "RandomForest_SMOTE     87.407407     12.592593      0.000000    100.000000   \n",
+       "SVM                    84.444444     15.555556     20.238095     79.761905   \n",
+       "SVM_SMOTE              81.481481     18.518519     13.095238     86.904762   \n",
+       "Tree                   88.148148     11.851852      7.142857     92.857143   \n",
+       "Tree_SMOTE             89.629630     10.370370      4.761905     95.238095   \n",
+       "\n",
+       "                      RECALL        F1  \n",
+       "LGBM                0.964286  0.880435  \n",
+       "LGBM_SMOTE          0.964286  0.890110  \n",
+       "Logistic            0.845238  0.835294  \n",
+       "Logistic_SMOTE      0.857143  0.837209  \n",
+       "RandomForest        0.952381  0.888889  \n",
+       "RandomForest_SMOTE  1.000000  0.908108  \n",
+       "SVM                 0.797619  0.779070  \n",
+       "SVM_SMOTE           0.869048  0.802198  \n",
+       "Tree                0.928571  0.876404  \n",
+       "Tree_SMOTE          0.952381  0.898876  "
       ]
      },
-     "execution_count": 397,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6597,7 +6666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -6616,6 +6685,27 @@
    "source": [
     "result[\"検証精度%\"].plot(kind='bar');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
